[gd_scene load_steps=19 format=3 uid="uid://doeullxanca5i"]

[ext_resource type="Texture2D" uid="uid://bmocnh47sfsl5" path="res://scenes/ui_scene/scene_item/assets/icon.png" id="1_8t2ka"]
[ext_resource type="Script" path="res://scenes/ui_scene/scene_item/neo_item_list.gd" id="1_yahb5"]
[ext_resource type="Texture2D" uid="uid://bwh43rlkvcm2x" path="res://scenes/ui_scene/scene_item/assets/tab-bg.png" id="2_bbivq"]
[ext_resource type="Script" path="res://scenes/ui_scene/scene_item/catagory_tab_bar.gd" id="4_0past"]
[ext_resource type="Script" path="res://scenes/ui_scene/scene_item/item_list.gd" id="5_8noup"]
[ext_resource type="Script" path="res://scenes/ui_scene/scene_item/item_help_label.gd" id="6_5p1xo"]
[ext_resource type="Texture2D" uid="uid://cixw7gukaner6" path="res://assets/system/建立组合.svg" id="6_inn2l"]
[ext_resource type="PackedScene" uid="uid://bwqclo5yw5lri" path="res://component/key_tips_bottom/key_tips_bottom.tscn" id="7_om21v"]
[ext_resource type="Script" path="res://component/key_tips_bottom/key_tips_config.gd" id="8_jgwf4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v7bvl"]
bg_color = Color(0.012965, 0.00320093, 0.00328207, 0.764706)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_abv0d"]
texture = ExtResource("2_bbivq")
texture_margin_left = 8.0
texture_margin_right = 18.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ps1qv"]
bg_color = Color(1, 1, 1, 0.0352941)

[sub_resource type="LabelSettings" id="LabelSettings_7j84b"]
font_color = Color(0.487907, 0.168772, 0.325257, 1)

[sub_resource type="Resource" id="Resource_jvy54"]
resource_name = "A键配置"
script = ExtResource("8_jgwf4")
key_name = &"使用"
is_show = true

[sub_resource type="Resource" id="Resource_qpj6h"]
resource_name = "B键配置"
script = ExtResource("8_jgwf4")
key_name = &"返回"
is_show = true

[sub_resource type="Resource" id="Resource_ra4dh"]
resource_name = "X键配置"
script = ExtResource("8_jgwf4")
key_name = &"组合"
is_show = true

[sub_resource type="Resource" id="Resource_8aia1"]
resource_name = "Y键配置"
script = ExtResource("8_jgwf4")
key_name = &"功能名称"
is_show = false

[sub_resource type="Resource" id="Resource_ewjei"]
resource_name = "左右键配置"
script = ExtResource("8_jgwf4")
key_name = &"选择"
is_show = true

[node name="NeoItemList" type="CanvasLayer"]
script = ExtResource("1_yahb5")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v7bvl")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="Spacing" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 17.095)
layout_mode = 2

[node name="CatagoryBar" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 25

[node name="MainIcon" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/CatagoryBar"]
layout_mode = 2
texture = ExtResource("1_8t2ka")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/CatagoryBar"]
custom_minimum_size = Vector2(640, 0)
layout_mode = 2

[node name="Spacing" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/CatagoryBar/VBoxContainer"]
custom_minimum_size = Vector2(0, 17.095)
layout_mode = 2

[node name="CatagoryTabBar" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/CatagoryBar/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_abv0d")
script = ExtResource("4_0past")

[node name="CatagoryGroup" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/CatagoryBar/VBoxContainer/CatagoryTabBar"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 2

[node name="Spacing2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 17.095)
layout_mode = 2

[node name="ItemList" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ps1qv")
script = ExtResource("5_8noup")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ItemList"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ItemList/VBoxContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ItemList/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="CraftModeHint" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ItemList/VBoxContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/ItemList/VBoxContainer/MarginContainer/VBoxContainer/CraftModeHint"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("6_inn2l")
expand_mode = 4

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ItemList/VBoxContainer/MarginContainer/VBoxContainer/CraftModeHint"]
layout_mode = 2
text = "组合模式"
label_settings = SubResource("LabelSettings_7j84b")

[node name="ItemGrid" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ItemList/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 325
theme_override_constants/v_separation = 15
columns = 2

[node name="ItemHelpLabel" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ItemList/VBoxContainer"]
layout_mode = 2
alignment = 1
script = ExtResource("6_5p1xo")

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ItemList/VBoxContainer/ItemHelpLabel"]
layout_mode = 2
size_flags_horizontal = 4
text = "你好"

[node name="Spacing3" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ItemList/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="Spacing3" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="KeyTipsBottom" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("7_om21v")]
layout_mode = 2
size_flags_horizontal = 8
a_btn = SubResource("Resource_jvy54")
b_btn = SubResource("Resource_qpj6h")
x_btn = SubResource("Resource_ra4dh")
y_btn = SubResource("Resource_8aia1")
arrow_btn = SubResource("Resource_ewjei")
